// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button basics matches snapshot 1`] = `
.emotion-3 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00823b;
  box-shadow: 0 2px 0 #003618;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 20px;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 19px;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-1:link,
.emotion-1:visited,
.emotion-1:active,
.emotion-1:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #00692f;
}

.emotion-1:active {
  top: 2px;
  box-shadow: none;
}

.emotion-1::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-1:active::before {
  top: -4px;
}

.emotion-1:disabled {
  opacity: 0.5;
  background: #00823b;
}

.emotion-1:disabled:hover {
  background-color: #00823b;
  cursor: default;
}

.emotion-1:disabled:focus {
  outline: none;
}

.emotion-1:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #003618;
}

.emotion-1 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-1 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 30px;
  }
}

<StyledHoc
  disabled={false}
  start={false}
>
  <Button
    className="emotion-3 emotion-0"
    disabled={false}
    start={false}
  >
    <StyledButton
      className="emotion-3 emotion-0"
      disabled={false}
      isStart={false}
    >
      <button
        className="emotion-0 emotion-1 emotion-2"
        disabled={false}
      >
        Example
      </button>
    </StyledButton>
  </Button>
</StyledHoc>
`;

exports[`button blue button, with automatic colours matches snapshot 1`] = `
.emotion-3 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #005ea5;
  box-shadow: 0 2px 0 #003259;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 20px;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 19px;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-1:link,
.emotion-1:visited,
.emotion-1:active,
.emotion-1:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #004f8c;
}

.emotion-1:active {
  top: 2px;
  box-shadow: none;
}

.emotion-1::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-1:active::before {
  top: -4px;
}

.emotion-1:disabled {
  opacity: 0.5;
  background: #005ea5;
}

.emotion-1:disabled:hover {
  background-color: #005ea5;
  cursor: default;
}

.emotion-1:disabled:focus {
  outline: none;
}

.emotion-1:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #003259;
}

.emotion-1 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-1 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 30px;
  }
}

<ButtonBlue>
  <StyledHoc
    buttonColour="#005ea5"
    disabled={false}
    start={false}
  >
    <Button
      buttonColour="#005ea5"
      className="emotion-3 emotion-0"
      disabled={false}
      start={false}
    >
      <StyledButton
        buttonColour="#005ea5"
        className="emotion-3 emotion-0"
        disabled={false}
        isStart={false}
      >
        <button
          className="emotion-0 emotion-1 emotion-2"
          disabled={false}
        >
          Blue button
        </button>
      </StyledButton>
    </Button>
  </StyledHoc>
</ButtonBlue>
`;

exports[`button button with icon matches snapshot 1`] = `
.emotion-5 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 18px;
  line-height: 1;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 8px 15px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00823b;
  box-shadow: 0 2px 0 #003618;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 20px;
}

@media print {
  .emotion-3 {
    font-size: 18px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 24px;
    line-height: 1;
  }
}

.emotion-3:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    width: auto;
  }
}

.emotion-3:link,
.emotion-3:visited,
.emotion-3:active,
.emotion-3:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #00692f;
}

.emotion-3:active {
  top: 2px;
  box-shadow: none;
}

.emotion-3::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-3:active::before {
  top: -4px;
}

.emotion-3:disabled {
  opacity: 0.5;
  background: #00823b;
}

.emotion-3:disabled:hover {
  background-color: #00823b;
  cursor: default;
}

.emotion-3:disabled:focus {
  outline: none;
}

.emotion-3:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #003618;
}

.emotion-3 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-3 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<ButtonStartIcon>
  <StyledHoc
    disabled={false}
    icon={
      <ButtonArrow
        fill="currentColor"
        title="ButtonArrow"
      />
    }
    start={true}
  >
    <Button
      className="emotion-5 emotion-2"
      disabled={false}
      icon={
        <ButtonArrow
          fill="currentColor"
          title="ButtonArrow"
        />
      }
      start={true}
    >
      <StyledButton
        className="emotion-5 emotion-2"
        disabled={false}
        icon={
          <ButtonArrow
            fill="currentColor"
            title="ButtonArrow"
          />
        }
        isStart={true}
      >
        <button
          className="emotion-2 emotion-3 emotion-4"
          disabled={false}
        >
          <ButtonContents>
            <span
              className="emotion-0 emotion-1"
            >
              Start now
            </span>
          </ButtonContents>
          <ButtonArrow
            fill="currentColor"
            title="ButtonArrow"
          >
            <SVG
              fill="currentColor"
              title="ButtonArrow"
              viewBox="0 0 706 860"
            >
              <svg
                fill="currentColor"
                height="100%"
                style={
                  Object {
                    "display": "block",
                  }
                }
                version="1.1"
                viewBox="0 0 706 860"
                width="100%"
              >
                <title>
                  ButtonArrow
                </title>
                <g>
                  <path
                    d="M.152 0h252.993l452.108 430H452.261z"
                  />
                  <path
                    d="M0 860h252.993L705.1 430H452.108z"
                    fillOpacity="0.5"
                  />
                </g>
              </svg>
            </SVG>
          </ButtonArrow>
        </button>
      </StyledButton>
    </Button>
  </StyledHoc>
</ButtonStartIcon>
`;

exports[`button custom colours matches snapshot 1`] = `
.emotion-3 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #0b0c0c;
  background-color: #dee0e2;
  box-shadow: 0 2px 0 #f47738;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 20px;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 19px;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-1:link,
.emotion-1:visited,
.emotion-1:active,
.emotion-1:hover {
  color: #0b0c0c;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #ffbf47;
}

.emotion-1:active {
  top: 2px;
  box-shadow: none;
}

.emotion-1::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-1:active::before {
  top: -4px;
}

.emotion-1:disabled {
  opacity: 0.5;
  background: #dee0e2;
}

.emotion-1:disabled:hover {
  background-color: #dee0e2;
  cursor: default;
}

.emotion-1:disabled:focus {
  outline: none;
}

.emotion-1:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #f47738;
}

.emotion-1 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-1 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 30px;
  }
}

<ButtonWacky>
  <StyledHoc
    buttonColour="#dee0e2"
    buttonHoverColour="#ffbf47"
    buttonShadowColour="#f47738"
    buttonTextColour="#0b0c0c"
    disabled={false}
    start={false}
  >
    <Button
      buttonColour="#dee0e2"
      buttonHoverColour="#ffbf47"
      buttonShadowColour="#f47738"
      buttonTextColour="#0b0c0c"
      className="emotion-3 emotion-0"
      disabled={false}
      start={false}
    >
      <StyledButton
        buttonColour="#dee0e2"
        buttonHoverColour="#ffbf47"
        buttonShadowColour="#f47738"
        buttonTextColour="#0b0c0c"
        className="emotion-3 emotion-0"
        disabled={false}
        isStart={false}
      >
        <button
          className="emotion-0 emotion-1 emotion-2"
          disabled={false}
        >
          Wacky colours
        </button>
      </StyledButton>
    </Button>
  </StyledHoc>
</ButtonWacky>
`;

exports[`button disabled matches snapshot 1`] = `
.emotion-3 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00823b;
  box-shadow: 0 2px 0 #003618;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 20px;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 19px;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-1:link,
.emotion-1:visited,
.emotion-1:active,
.emotion-1:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #00692f;
}

.emotion-1:active {
  top: 2px;
  box-shadow: none;
}

.emotion-1::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-1:active::before {
  top: -4px;
}

.emotion-1:disabled {
  opacity: 0.5;
  background: #00823b;
}

.emotion-1:disabled:hover {
  background-color: #00823b;
  cursor: default;
}

.emotion-1:disabled:focus {
  outline: none;
}

.emotion-1:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #003618;
}

.emotion-1 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-1 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 30px;
  }
}

<ButtonDisabled>
  <StyledHoc
    disabled={true}
    start={false}
  >
    <Button
      className="emotion-3 emotion-0"
      disabled={true}
      start={false}
    >
      <StyledButton
        className="emotion-3 emotion-0"
        disabled={true}
        isStart={false}
      >
        <button
          className="emotion-0 emotion-1 emotion-2"
          disabled={true}
        >
          Disabled primary button
        </button>
      </StyledButton>
    </Button>
  </StyledHoc>
</ButtonDisabled>
`;

exports[`button start button matches snapshot 1`] = `
.emotion-3 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 30px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 18px;
  line-height: 1;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 8px 15px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00823b;
  box-shadow: 0 2px 0 #003618;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 20px;
}

@media print {
  .emotion-1 {
    font-size: 18px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 24px;
    line-height: 1;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-1:link,
.emotion-1:visited,
.emotion-1:active,
.emotion-1:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #00692f;
}

.emotion-1:active {
  top: 2px;
  box-shadow: none;
}

.emotion-1::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.emotion-1:active::before {
  top: -4px;
}

.emotion-1:disabled {
  opacity: 0.5;
  background: #00823b;
}

.emotion-1:disabled:hover {
  background-color: #00823b;
  cursor: default;
}

.emotion-1:disabled:focus {
  outline: none;
}

.emotion-1:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #003618;
}

.emotion-1 svg {
  max-width: 15px;
}

@media only screen and (min-width:641px) {
  .emotion-1 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 30px;
  }
}

<ButtonStart>
  <StyledHoc
    disabled={false}
    start={true}
  >
    <Button
      className="emotion-3 emotion-0"
      disabled={false}
      start={true}
    >
      <StyledButton
        className="emotion-3 emotion-0"
        disabled={false}
        isStart={true}
      >
        <button
          className="emotion-0 emotion-1 emotion-2"
          disabled={false}
        >
          Save and continue
        </button>
      </StyledButton>
    </Button>
  </StyledHoc>
</ButtonStart>
`;
